tests/baselines/reference/protectedClassPropertyAccessibleWithinSubclass3(target=es2015).errors.txt
protectedClassPropertyAccessibleWithinSubclass3.ts(2,15): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
protectedClassPropertyAccessibleWithinSubclass3.ts(11,15): error TS2855: Class field 'x' defined by the parent class is not accessible in the child class via super.


==== protectedClassPropertyAccessibleWithinSubclass3.ts (2 errors) ====
    class Base {
        protected x: string;
                  ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        method() {
            this.x;            // OK, accessed within their declaring class
        }
    }
    
    class Derived extends Base {
        method1() {
            this.x;            // OK, accessed within a subclass of the declaring class
            super.x;           // Error, x is not public
                  ~
!!! error TS2855: Class field 'x' defined by the parent class is not accessible in the child class via super.
        }
    }